@@ -46,6 +46,7 @@
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
+        <alfresco.indexer.version>0.6.5</alfresco.indexer.version>
     </properties>
 
     <repositories>
@@ -124,6 +125,91 @@
                     <workingDirectory>target/test-output</workingDirectory>
                 </configuration>
             </plugin>
+
+            <plugin>
+                <artifactId>maven-dependency-plugin</artifactId>
+                <executions>
+                    <execution>
+                        <id>copy-war</id>
+                        <phase>generate-resources</phase>
+                        <goals>
+                            <goal>copy</goal>
+                        </goals>
+                        <configuration>
+                            <outputDirectory>target/dependency</outputDirectory>
+                            <artifactItems>
+                                <artifactItem>
+                                    <groupId>${project.groupId}</groupId>
+                                    <artifactId>mcf-api-service</artifactId>
+                                    <version>${project.version}</version>
+                                    <type>war</type>
+                                    <overWrite>false</overWrite>
+                                    <destFileName>mcf-api-service.war</destFileName>
+                                </artifactItem>
+                                <artifactItem>
+                                    <groupId>${project.groupId}</groupId>
+                                    <artifactId>mcf-authority-service</artifactId>
+                                    <version>${project.version}</version>
+                                    <type>war</type>
+                                    <overWrite>false</overWrite>
+                                    <destFileName>mcf-authority-service.war</destFileName>
+                                </artifactItem>
+                                <artifactItem>
+                                    <groupId>${project.groupId}</groupId>
+                                    <artifactId>mcf-crawler-ui</artifactId>
+                                    <version>${project.version}</version>
+                                    <type>war</type>
+                                    <overWrite>false</overWrite>
+                                    <destFileName>mcf-crawler-ui.war</destFileName>
+                                </artifactItem>
+                                <artifactItem>
+                                    <artifactId>alfresco-indexer-webscripts-war</artifactId>
+                                    <groupId>org.alfresco.consulting.indexer</groupId>
+                                    <version>${alfresco.indexer.version}</version>
+                                    <type>war</type>
+                                    <overWrite>false</overWrite>
+                                    <destFileName>alfresco.war</destFileName>
+                                </artifactItem>
+                            </artifactItems>
+                        </configuration>
+                    </execution>
+                </executions>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-failsafe-plugin</artifactId>
+                <version>2.12.3</version>
+                <configuration>
+                    <skipTests>${skipITs}</skipTests>
+                    <systemPropertyVariables>
+                        <crawlerWarPath>../dependency/mcf-crawler-ui.war</crawlerWarPath>
+                        <authorityserviceWarPath>../dependency/mcf-authority-service.war</authorityserviceWarPath>
+                        <apiWarPath>../dependency/mcf-api-service.war</apiWarPath>
+                        <alfrescoServerWarPath>../dependency/alfresco.war</alfrescoServerWarPath>
+                    </systemPropertyVariables>
+                    <excludes>
+                        <exclude>**/*Postgresql*.java</exclude>
+                        <exclude>**/*MySQL*.java</exclude>
+                    </excludes>
+                    <forkMode>always</forkMode>
+                    <workingDirectory>target/test-output</workingDirectory>
+                    <argLine>-Xms512m -Xmx1024m -Xss1024k -XX:MaxPermSize=256m -XX:NewSize=256m</argLine>
+                </configuration>
+                <executions>
+                    <execution>
+                        <id>integration-test</id>
+                        <goals>
+                            <goal>integration-test</goal>
+                        </goals>
+                    </execution>
+                    <execution>
+                        <id>verify</id>
+                        <goals>
+                            <goal>verify</goal>
+                        </goals>
+                    </execution>
+                </executions>
+            </plugin>
         </plugins>
     </build>
 
@@ -131,7 +217,7 @@
         <dependency>
             <groupId>org.alfresco.consulting.indexer</groupId>
             <artifactId>alfresco-indexer-client</artifactId>
-            <version>0.6.2</version>
+            <version>${alfresco.indexer.version}</version>
         </dependency>
 
         <dependency>
@@ -155,6 +241,12 @@
           <version>${project.version}</version>
         </dependency>
 
+        <dependency>
+            <groupId>org.apache.chemistry.opencmis</groupId>
+            <artifactId>chemistry-opencmis-client-impl</artifactId>
+            <version>0.10.0</version>
+            <scope>test</scope>
+        </dependency>
         <dependency>
           <groupId>${project.groupId}</groupId>
           <artifactId>mcf-core</artifactId>
@@ -290,14 +382,14 @@
           <artifactId>jsp-api-2.1-glassfish</artifactId>
           <version>${glassfish.version}</version>
           <scope>test</scope>
-        </dependency>    
+        </dependency>
         <dependency>
           <groupId>org.mortbay.jetty</groupId>
           <artifactId>jsp-2.1-glassfish</artifactId>
           <version>${glassfish.version}</version>
           <scope>test</scope>
         </dependency>
-    
+
         <dependency>
           <groupId>org.slf4j</groupId>
           <artifactId>slf4j-api</artifactId>
